# dvm

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  dotfiles.json  install.sh  logging.conf  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
data/default/bash/: .bash_variables  .bashrc
data/personal/bash/: .bash_variables  .bashrc
data/personal/git/: .gitconfig
data/personal/terminal/: .tmux.conf
data/personal/vcs/: .gitconfig
data/work/bash/: .bash_variables
data/work/editor/: .vimrc
data/work/git/: .gitconfig
data/work/tmux/: .tmux.conf
src/config/: __init__.py  logging.py  paths.py
src/core/: __init__.py  dotfiles.py  dvm.py
src/core/exceptions/: __init__.py  path_resolution_error.py
src/core/models/: __init__.py  symlink.py
src/core/services/: __init__.py  file_service.py  symlink_service.py
tests/: conftest.py  run_tests.py
tests/config/: __init__.py  constants.py  environment.py
tests/data/default/bash/: .bashrc
tests/data/work/vim/: .vimrc
tests/symlink_service/: conftest.py  test_symlink_service.py  utils.py
