[project]
name = "dotfiles"
version = "0.1.0"
description = "Linux system configuration simplified through dotfiles management"
license = {text = "MIT"}
authors = [
    {name = "Valentin Lafage",email = "vlafage.dev@free.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "configuration", "python", "linux" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/ptitcon/dotfiles"
"Bug Tracker" = "https://github.com/ptitcon/dotfiles/issues"

[project.scripts]
dvm = "cli.__main__:main"
test = "tests.run_tests:main"
test-ci = "tests.run_tests:run_in_ci"

[project.optional-dependencies]
pre-commit = [ "pre-commit>=3.5.0" ]
linting = [ "black>=24.8.0", "flake8>=7.1.1" ]
testing = [ "pytest>=8.3.4", "pytest-mock>=3.14.0" ]

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.black]
target-version = ['py39']
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
