[project]
name = "dvm"
version = "0.1.0"
description = "Simplify versioning of Linux dotfiles"
license = {text = "MIT"}
authors = [
    {name = "Valentin Lafage",email = "vlafage.dev@free.fr"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = [ "configuration", "python", "linux" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/ptitcon/dvm"
"Bug Tracker" = "https://github.com/ptitcon/dvm/issues"

[project.scripts]
dvm = "cli.__main__:main"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[tool.black]
target-version = ['py39']
line-length = 88
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
